Reflect changes -Rename 'findAllPagened' to 'findAll' -Replace returning data with current methods return -Remove deleted method parameters -Remove 'BookModelAssembler' -Remove tests of deleted methods -Add additional tests